[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Jan Beelte <jan@kadalian.com>"]
readme = "README.md"

[tool.poetry.scripts]
main = "python_template.main:main"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"
pre-commit = "^3.6.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
